# keks

./: .gitignore  pyproject.toml
.github/: README.md
.github/workflows/: deploy.yml  lint.yml  publish.yml  release.yml  test.yml
keks/: __init__.py  __main__.py
tests/: test_cli.py  test_hello.py
website/: astro.config.mjs  astro.config.mts  config.mts  package-lock.json  package.json  tsconfig.json
website/public/: _headers  _redirects  site.webmanifest
website/public/.well-known/: security.txt
website/src/components/: Favicon.astro  SEO.astro
website/src/layout/: Layout.astro
website/src/layouts/: Layout.astro
website/src/pages/: 404.astro  index.astro
