[project]
name = "keks"
readme = ".github/README.md"
dynamic = [
    "version"
]
keywords = []
classifiers = [
    "Topic :: Education",
    "Natural Language :: German",
    "License :: OSI Approved :: MIT License"
]
dependencies = [

]

[project.license]
file = "LICENCE"

[project.urls]
Author = "https://github.com/katzensindniedlich"
Source = "https://github.com/katzensindniedlich/keks"
Webpage = "https://schokokeks.pages.dev"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-md"
]

[project.scripts]
keks = "keks.__main__:cli"

[tool.setuptools]
packages = [
    "keks"
]

[tool.setuptools.dynamic]
version = {attr = "keks.__version__"}